force-app/main/default/objects/FoodPrice__c/FoodPrice__c.object-meta.xml
<CustomObject>
    <description>식단가</description>
    <label>식단가</label>
    <nameField>
        <label>Food Price Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>