force-app/main/default/objects/FoodPrice__c/fields/fm_AnnualAmount__c.field-meta.xml
<CustomField>
    <fullName>fm_AnnualAmount__c</fullName>
    <formula>OperatingDays__c *  MealsPerDay__c *  InputAmount__c</formula>
    <label>Annual Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>