force-app/main/default/objects/FoodPrice__c/fields/InputAmount__c.field-meta.xml
<CustomField>
    <fullName>InputAmount__c</fullName>
    <description>투입 금액</description>
    <label>Input Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>