force-app/main/default/objects/FoodPrice__c/fields/MealsPerDay__c.field-meta.xml
<CustomField>
    <fullName>MealsPerDay__c</fullName>
    <description>운영일</description>
    <label>Meals Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>