force-app/main/default/objects/FoodPrice__c/fields/OperatingDays__c.field-meta.xml
<CustomField>
    <fullName>OperatingDays__c</fullName>
    <description>운영일</description>
    <label>Operating Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>