force-app/main/default/objects/FoodPrice__c/fields/OperatingExpenseType__c.field-meta.xml
<CustomField>
    <fullName>OperatingExpenseType__c</fullName>
    <label>Operating Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeofComposition__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>인건비</fullName>
            </value>
            <value>
                <fullName>투자비</fullName>
            </value>
            <value>
                <fullName>소모품</fullName>
            </value>
            <value>
                <fullName>기타경비</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>