force-app/main/default/objects/FoodPrice__c/fields/TypeofComposition__c.field-meta.xml
<CustomField>
    <fullName>TypeofComposition__c</fullName>
    <description>구성비 유형</description>
    <label>Type of Composition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>식단가</fullName>
            </value>
            <value>
                <fullName>재료비</fullName>
            </value>
            <value>
                <fullName>운영경비</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>