force-app/main/default/objects/FoodPrice__c/fields/VATIncluded__c.field-meta.xml
<CustomField>
    <fullName>VATIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VAT 포함</description>
    <label>VAT Included</label>
    <type>Checkbox</type>
</CustomField>